# pganalyze-loki-shipper

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
src/pganalyze_loki_shipper/: cli.py
